modificamos el AppShell

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -7,9 +7,16 @@
     Shell.FlyoutBehavior="Disabled"
     Title="MosqueraAnthonny_TareaApuntes">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <Shell.FlyoutHeader>
+        <Label Text="Mi Navegación"
+               FontSize="24"
+               HorizontalOptions="Center" />
+    </Shell.FlyoutHeader>
 
+    <TabBar>
+        <ShellContent Title="Inicio" Icon="home.png"
+                      ContentTemplate="{DataTemplate local:InicioPage}" />
+        <ShellContent Title="Acerca de" Icon="about.png"
+                      ContentTemplate="{DataTemplate local:AboutPage}" />
+    </TabBar>
 </Shell>
