--- a/NuevaNotaPage.xaml
+++ b/NuevaNotaPage.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MosqueraAnthonny_TareaApuntes.NuevaNotaPage"
              Title="NuevaNotaPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    <StackLayout Padding="20">
+        <Entry Placeholder="Título de la nota" x:Name="TituloEntry" />
+        <Editor Placeholder="Escribe tu nota aquí..." x:Name="ContenidoEditor" />
+        <Button Text="Guardar" Clicked="GuardarNota_Clicked" />
+    </StackLayout>
 </ContentPage>
