los nombres originales de titulo y contenido no funcionaban, fueron cambiados y se resolvio el problema

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -21,6 +21,6 @@
         <ShellContent Title="Notas" Icon="perro.jpg"
                   ContentTemplate="{DataTemplate local:NotasPage}" />
         <ShellContent Title="Nueva Nota"  Icon="julien.jpg"
-                      ContentTemplate="{DataTemplate MosqueraAnthonny_TareaApuntes.NuevaNotaPage}" />
+                      ContentTemplate="{DataTemplate local:NuevaNotaPage}" />
     </TabBar>
 </Shell>
