--- a/NuevaNotaPage.xaml
+++ b/NuevaNotaPage.xaml
@@ -5,8 +5,8 @@
              Title="NuevaNotaPage">
     
     <StackLayout Padding="20">
-        <Entry Placeholder="Título de la nota" x:Name="TituloEntry" />
-        <Editor Placeholder="Escribe tu nota aquí..." x:Name="ContenidoEditor" />
+        <Entry Placeholder="Título de la nota" x:Name="TituloNota" />
+        <Editor Placeholder="Escribe tu nota aquí..." x:Name="ContenidoNota" />
         <Button Text="Guardar" Clicked="GuardarNota_Clicked" />
     </StackLayout>
 </ContentPage>
